--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,10 @@
     "@angular/platform-browser": "20.0.5",
     "@angular/platform-browser-dynamic": "20.0.5",
     "@angular/router": "20.0.5",
+    "@fullcalendar/angular": "^6.1.19",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
     "@ng-bootstrap/ng-bootstrap": "19.0.0",
     "@popperjs/core": "2.11.8",
     "apexcharts": "4.7.0",
