--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "@popperjs/core": "2.11.8",
     "apexcharts": "4.7.0",
     "bootstrap": "5.3.7",
+    "event-source-polyfill": "^1.0.31",
     "ng-apexcharts": "1.16.0",
     "ngx-scrollbar": "18.0.0",
     "rxjs": "~7.8.2",
